Next release
============

* FIX: Prevent crash when tvtk is loaded - ETS_TOOLKIT=null (https://github.com/nipy/nipype/pull/973)
* ENH: New interfaces in dipy: RESTORE, EstimateResponseSH, CSD and StreamlineTractography
       (https://github.com/nipy/nipype/pull/1090)
* ENH: Added interfaces of AFNI (https://github.com/nipy/nipype/pull/1360,
       https://github.com/nipy/nipype/pull/1361, https://github.com/nipy/nipype/pull/1382)
* ENH: Provides a Nipype wrapper for antsJointFusion (https://github.com/nipy/nipype/pull/1351)
* ENH: Added support for PETPVC (https://github.com/nipy/nipype/pull/1335)
* ENH: Merge S3DataSink into DataSink, added AWS documentation (https://github.com/nipy/nipype/pull/1316)
* TST: Cache APT in CircleCI (https://github.com/nipy/nipype/pull/1333)
* ENH: Add new flags to the BRAINSABC for new features (https://github.com/nipy/nipype/pull/1322)
* ENH: Provides a Nipype wrapper for ANTs DenoiseImage (https://github.com/nipy/nipype/pull/1291)
* FIX: Minor bugfix logging hash differences (https://github.com/nipy/nipype/pull/1298)
* FIX: Use released Prov python library (https://github.com/nipy/nipype/pull/1279)
* ENH: Support for Python 3 (https://github.com/nipy/nipype/pull/1221)
* FIX: VTK version check missing when using tvtk (https://github.com/nipy/nipype/pull/1219)
* ENH: Added an OAR scheduler plugin (https://github.com/nipy/nipype/pull/1259)
* ENH: New ANTs interface: antsBrainExtraction (https://github.com/nipy/nipype/pull/1231)
* API: Default model level for the bedpostx workflow has been set to "2" following FSL 5.0.9 lead
* ENH: New interfaces for interacting with AWS S3: S3DataSink and S3DataGrabber (https://github.com/nipy/nipype/pull/1201)
* ENH: Interfaces for MINC tools (https://github.com/nipy/nipype/pull/1304)

Release 0.11.0 (September 15, 2015)
============

* API: Change how hash values are computed (https://github.com/nipy/nipype/pull/1174)
* ENH: New algorithm: mesh.WarpPoints applies displacements fields to point sets